Closed Bug 1595199 Opened 5 years ago Closed 5 years ago

container height doesn't recalculate correctly when changing height to 'auto', with 'overflow: hidden'

Categories

(Core :: Layout: Block and Inline, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(2 files)

Attached file testcase

This is spun off of bug 1482938 comment 11.

In the attached testcase (which is simplified from the one there), the blue and fuchsia colored rectangles should double in height after a one second timeout. They do not in fact do so, but zooming causes the correct layout to appear.

Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Priority: -- → P2
Pushed by dbaron@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/36c0bb2ed661
Make nsGfxScrollFrame propagate ReflowInput's mFlags.mIsBResizeForPercentages to its inner, to fix vertical resizing layout bugs. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: