Bug 1595199 - Make nsGfxScrollFrame propagate ReflowInput's mFlags.mIsBResizeForPercentages to its inner, to fix vertical resizing layout bugs. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D52439